kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clear-command-docs
  namespace: default
  labels:
    app: clear-command-docs
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: clear-command-docs
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
